<resources>
    <string name="app_name">JobVibe</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email:</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="current_city">Current City</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_education">Current Education</string>
    <string name="college">College</string>
    <string name="year_of_completion">Year of Completion</string>
    <string name="percentage">Percentage</string>
    <string name="university_board">University/Board</string>
    <string name="board">Board</string>
    <string name="school">School</string>
    <string name="_12th_education">12th Education</string>
    <string name="_10th_education">10th Education</string>
    <string name="login">LOGIN</string>
    <string name="error_email">Enter a valid email address!</string>
    <string name="error_password">Minimum 8 character required!</string>
    <string name="error_cpassword">Confirm Password doesn\'t match!</string>
    <string name="error_empty_field">Field can\'t be empty!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_activity">Activity</string>
    <string name="title_activity_notification">Notification</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search job title or keywords</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_application_has_been_registered">Your Application has been registered.</string>

</resources>
