<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/signupbackground"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/busy"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_log_in">

    <ImageView
        android:id="@+id/IV_logoText"
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:src="@drawable/jobvibe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <RelativeLayout
        android:id="@+id/RL_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IV_logoText"
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_centerHorizontal="true">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/mytext">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.AppCompat.EditText.TextEdit"
                android:id="@+id/ET_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/label"
                android:textColorHighlight="@color/white"/>

        </android.support.design.widget.TextInputLayout>



      <android.support.design.widget.TextInputLayout
          android:id="@+id/TIL_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/TIL_email"
          app:errorEnabled="true"
          android:textColorHint="@color/white"
          app:hintTextAppearance="@style/mytext">

          <android.support.design.widget.TextInputEditText
              style="@style/Widget.AppCompat.EditText.TextEdit"
              android:id="@+id/ET_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:paddingTop="9dp"
              android:paddingBottom="9dp"
              android:textSize="@dimen/label"
              android:textColorHighlight="@color/white"/>

      </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TIL_password"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/mytext">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.AppCompat.EditText.TextEdit"
                android:id="@+id/ET_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:textSize="@dimen/label"
                android:textColorHighlight="@color/white"/>

        </android.support.design.widget.TextInputLayout>




    </RelativeLayout>


        <TextView
            android:id="@+id/TV_signbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_below="@+id/RL_login"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="52dp"
            android:layout_marginLeft="52dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:elevation="10dp"
            android:background="@drawable/signup_btn_bg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/label"
            android:gravity="center"/>

        <TextView
            android:id="@+id/TV_backtoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:padding="15dp"
            android:text="Or Login"
            android:textStyle="bold|italic"
            android:textSize="@dimen/label"
            android:textColor="@color/white"
            android:background="@drawable/tologinbg"/>

    </RelativeLayout>


</RelativeLayout>
