<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:background="@drawable/loginbackground"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/table"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_log_in">

    <ImageView
        android:id="@+id/IV_logoText"
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:src="@drawable/jobvibe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <RelativeLayout
        android:id="@+id/RL_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IV_logoText"
        android:layout_marginTop="40dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_centerHorizontal="true">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/mytext"
            android:textColorHint="@color/white"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.AppCompat.EditText.TextEdit"
                android:id="@+id/ET_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/label"
                android:textColorHighlight="#fff"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TIL_email"
            app:hintTextAppearance="@style/mytext"
            android:textColorHint="@color/white"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.AppCompat.EditText.TextEdit"
                android:id="@+id/ET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:textSize="@dimen/label"
                android:textColorHighlight="#fff"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
    <TextView
        android:id="@+id/TV_loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/RL_login"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:elevation="10dp"
        android:background="@drawable/signup_btn_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/label"
        android:gravity="center"/>

    <TextView
        android:id="@+id/crete_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:padding="15dp"
        android:text="Or Signup"
        android:textStyle="bold|italic"
        android:textSize="@dimen/label"
        android:layout_alignParentRight="true"
        android:background="@drawable/tosignupbg"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    </RelativeLayout>


</RelativeLayout>